Fix typo in Techs.json

--- a/android/assets/jsons/Translations/Techs.json
+++ b/android/assets/jsons/Translations/Techs.json
@@ -409,7 +409,7 @@
 		Korean:"건설"
 	}
 
-	"'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfulyl executed.' - Johann Wolfgang von Goethe":{
+	"'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfully executed.' - Johann Wolfgang von Goethe":{
 		Italian:"'Di un edificio bisogna guardare tre cose: che sia collocato nel posto giusto; che abbia fondamenta solide; che la costruzione sia eseguita con perizia.' - Johann Wolfgang von Goethe"
 		Simplified_Chinese:"“在一幢建筑里要看三样东西：它是否被正确地选址；它是否被牢固地奠基；它是否被成功地建造。”——约翰·沃尔夫冈·冯·歌德"
         Traditional_Chinese:"“在一棟建築裡要看三樣東西：它是否被正確選址；它是否被牢固奠基；它是否被成功建造。”——約翰·沃爾夫剛·馮·歌德"
